[gd_scene load_steps=11 format=3 uid="uid://ckacwciiu6sh4"]

[ext_resource type="Texture2D" uid="uid://52na5utmgmrn" path="res://scenes/menu/menu.png" id="1"]
[ext_resource type="Script" uid="uid://dqhvv6rljaq3n" path="res://scenes/menu/menu.gd" id="2"]
[ext_resource type="FontFile" uid="uid://cvvi6o8v4r7dh" path="res://fonts/ariblk.ttf" id="3"]
[ext_resource type="AudioStream" uid="uid://daax0sm4wiefg" path="res://sounds/uihover.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://dh6pm2jo1420s" path="res://sounds/uipress.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://chbwgwjhw1tmf" path="res://sounds/uirelease.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://dvtte0lvio6u0" path="res://sounds/baa.wav" id="7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ecwwl"]

[sub_resource type="Theme" id="Theme_mae5d"]
default_font = ExtResource("3")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0.545924, 0.934453, 1)
Button/colors/font_hover_pressed_color = Color(0.0536234, 0, 0.872918, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.160392, 0.185003, 1, 1)
Button/font_sizes/font_size = 12
Button/fonts/font = ExtResource("3")
Panel/styles/panel = SubResource("StyleBoxEmpty_ecwwl")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4hy44"]

[node name="Node2D" type="Node2D"]
script = ExtResource("2")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(320, 240)
texture = ExtResource("1")

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="ng" type="Button" parent="."]
texture_filter = 2
offset_left = 192.0
offset_top = 280.0
offset_right = 272.0
offset_bottom = 298.0
scale = Vector2(2.28, 2.28)
theme = SubResource("Theme_mae5d")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4hy44")
text = "New Game"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="ng2" type="Button" parent="."]
offset_left = 192.0
offset_top = 312.0
offset_right = 272.0
offset_bottom = 330.0
scale = Vector2(2.28, 2.28)
theme = SubResource("Theme_mae5d")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4hy44")
text = "Options"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="ng3" type="Button" parent="."]
texture_filter = 2
offset_left = 192.0
offset_top = 344.0
offset_right = 272.0
offset_bottom = 362.0
scale = Vector2(2.28, 2.28)
theme = SubResource("Theme_mae5d")
theme_override_colors/font_disabled_color = Color(0, 0, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4hy44")
text = "Exit"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="ng4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
volume_db = -10.0
mix_target = 2
max_polyphony = 6

[node name="ng5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -10.0
mix_target = 2

[node name="ng6" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
volume_db = -10.0
mix_target = 2

[node name="ng7" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")
volume_db = -10.0
pitch_scale = 1.25

[connection signal="button_up" from="ng" to="." method="_on_ng_button_up"]
[connection signal="mouse_entered" from="ng" to="." method="_on_ng_mouse_entered"]
[connection signal="pressed" from="ng" to="." method="_on_ng_pressed"]
[connection signal="button_down" from="ng2" to="." method="_on_opt_button_down"]
[connection signal="button_up" from="ng2" to="." method="_on_opt_button_up"]
[connection signal="mouse_entered" from="ng2" to="." method="_on_opt_mouse_entered"]
[connection signal="pressed" from="ng2" to="." method="_on_opt_pressed"]
[connection signal="button_down" from="ng3" to="." method="_on_quit_button_down"]
[connection signal="button_up" from="ng3" to="." method="_on_quit_button_up"]
[connection signal="mouse_entered" from="ng3" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="ng3" to="." method="_on_quit_pressed"]
